Version 2.03.02 - 
===================================
  Restore missing man info lvcreate --zero for thin-pools.
  Drop misleadning comment for metadata minimum_io_size for VDO segment.
  Add device hints to reduce scanning.
  Introduce LVM_SUPPRESS_SYSLOG to suppress syslog usage by generator.
  Fix generator quering lvmconfig unpresent config option.
  Fix memleak on bcache error path code.
  Fix missing unlock on lvm2 dmeventd plugin error path initialization.
  Improve Makefile dependency tracking.
  Move VDO support towards V2 target (6.2) support.
  Fix missing proper initialization of pv_list struct when adding pv.
  Fix (de)activation of RaidLVs with visible SubLVs
  Prohibit mirrored 'mirror' log via lvcreate and lvconvert
  Use sync io if async io_setup fails, or use_aio=0 is set in config.

Version 2.03.01 - 31st October 2018
===================================

Version 2.03.00 - 10th October 2018
===================================
  Add hot fix to avoiding locking collision when monitoring thin-pools.
  Allow raid4 -> linear conversion request.
  Fix lvconvert striped/raid0/raid0_meta -> raid6 regression.
  Add 'lvm2-activation-generator:' prefix for kmsg messages logged by generator.
  Add After=rbdmap.service to {lvm2-activation-net,blk-availability}.service.
  Reduce max concurrent aios to avoid EMFILE with many devices.
  Fix lvconvert conversion attempts to linear.
  Fix lvconvert raid0/raid0_meta -> striped regression.
  Fix lvconvert --splitmirror for mirror type (2.02.178).
  Do not pair cache policy and cache metadata format.
  lvconvert: reject conversions on raid1 LVs with split tracked SubLVs
  lvconvert: reject conversions on raid1 split tracked SubLVs
  Add basic creation support for VDO target.
  Never send any discard ioctl with test mode.
  Fix thin-pool alloc which needs same PV for data and metadata.
  Extend list of non-memlocked areas with newly linked libs.
  Enhance vgcfgrestore to check for active LVs in restored VG.